# warehousebot

./: .gitlab-ci.yml  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs  main.rs
src/bot/rest/: mod.rs
src/botcommands/rest/: mod.rs
src/cli/: mod.rs
src/cliplotter/: mod.rs
src/warehouse/: mod.rs
