[package]
name = "warehousebot"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.2.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rustyline = "^15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
simple_logger = "5.0.0"


[lib]
name = "warehousebot"
path = "src/lib.rs"


[features]
default = ["with-file-history"]
with-file-history = []
